se dio más estilo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                 <img src="img/pizza.jpg"  alt="Pizza">
             </div>
             <nav class="nav">
-                <a href=""> Enlace 1 </a>
-                <a href=""> ENLACE 2 </a>
-                <a href=""> ENLACE 3 </a>
+                <a href="#somos"> Quienes somos </a>
+                <a href="#variedad"> Variedad </a>
+                <a href="#galeria"> Galería </a>
             </nav>
         </header>
         <main>
@@ -25,8 +25,8 @@
                 </p>
             </section>
             <section >
-                <h2> Variedad </h2>
-                <div>
+                <h2 id="variedad"> Variedad </h2>
+                <div class="variedad_img">
                     <img src="img/pizza hawaiana 1.webp" width="300" alt="Pizza hawaiana">
                 </div>
                 <ul>
@@ -38,15 +38,17 @@
                 </ul>
             </section>
             <section class="galeria">
-                <h2>Galería</h2>
-                <img src="img/1 pizza carnes-frias.png" alt="pizza carnes carnes frias">
-                <img src="img/2 pizza ranchera.jpg" alt="pizza ranchera">
-                <img src="img/3 pizza-hawaiana.jpg" alt="pizza hawaiana">
-                <img src="img/4 pizza-mexicana.webp" alt="pizza Mexicana">
-                <img src="img/5 pizza-vegetariana.jpg" alt="pizza Vegetariana">
-                <img src="img/6 pizza-yucateca.jpg" alt="pizza Yucateca">
-                <img src="img/7 pizza peperoni.webp" alt="pizza peperoni">
-                <img src="img/8 pizza quesos.jpg" alt="pizza quesos">
+                <h2 id="galeria">Galería</h2>
+                <div class="galeria_img">
+                    <img class="g1" src="img/1 pizza carnes-frias.png" alt="pizza carnes carnes frias">
+                    <img class="g2" src="img/2 pizza ranchera.jpg" alt="pizza ranchera">
+                    <img class="g3" src="img/3 pizza-hawaiana.jpg" alt="pizza hawaiana">
+                    <img class="g4" src="img/4 pizza-mexicana.webp" alt="pizza Mexicana">
+                    <img class="g5" src="img/5 pizza-vegetariana.jpg" alt="pizza Vegetariana">
+                    <img class="g6" src="img/6 pizza-yucateca.jpg" alt="pizza Yucateca">
+                    <img class="g7" src="img/7 pizza peperoni.webp" alt="pizza peperoni">
+                    <img class="g8" src="img/8 pizza quesos.jpg" alt="pizza quesos">
+                </div>
             </section>
 
         </main>
